----------------------------------------------------------------------
 OmegaT 4.1.3 update 1
----------------------------------------------------------------------
  1 Enhancement
  0 Bug fixes
  1 Localisation update
----------------------------------------------------------------------
4.1.3 update 1 vs 4.1.3

  Implemented requests:

  - Dismiss auto-completer window after hitting Ctrl + right/left
arrow keys
  https://sourceforge.net/p/omegat/feature-requests/1356/

  Localisation Updates:

  - Russian localisation updated to 4.1.3 update 1 (UI, readme) 

----------------------------------------------------------------------
 OmegaT 4.1.3 (2017-12-03)
----------------------------------------------------------------------
  9 Enhancements
  4 Bug fixes
  3 Localisation updates
----------------------------------------------------------------------
4.1.3 vs 4.1.2 update 2

  Implemented requests:

  - Automatically unzip TMX files in /tm
  https://sourceforge.net/p/omegat/feature-requests/1339/

  - Commit target files
  https://sourceforge.net/p/omegat/feature-requests/1341/

  - Remember Statistics dialog geometry
  https://sourceforge.net/p/omegat/feature-requests/1345/

  - New segmentation rule to default set of Finnish language rules
  https://sourceforge.net/p/omegat/feature-requests/1347/

  - Allow copying support info from Help > About
  https://sourceforge.net/p/omegat/feature-requests/1351/

  - Update local omegat.project in 4.x team projects
  https://sourceforge.net/p/omegat/feature-requests/1335/

  - Improve highlighting of terminology issues
  https://sourceforge.net/p/omegat/feature-requests/1342/

  - Unify glossary matching and marking logic
  https://sourceforge.net/p/omegat/feature-requests/1354/

  - Improve capitalization behavior in glossary auto-replacement
  https://sourceforge.net/p/omegat/feature-requests/1355/

  Bug fixes:

  - Forced versioned /target in 4.1-compatible team projects
  https://sourceforge.net/p/omegat/bugs/863/
